--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bad-words": "^1.6.1",
     "http": "^0.0.0",
     "sockjs": "^0.3.18"
   }
